--- a/css/cigarrilos.css
+++ b/css/cigarrilos.css
@@ -329,6 +329,24 @@ h2 {
 /*CHAT */
 
 
+/*BUSCADOR*/
+.search-bar {
+    margin: 20px auto;
+    text-align: center;
+}
+
+.search-bar input {
+    width: 80%;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
+/*BUSCADOR*/
+
 @media (max-width:500px) {
     
     .header {
