Ya esta listo el stock, faltan ultimos detalles y la subimos

--- a/css/limpieza.css
+++ b/css/limpieza.css
@@ -368,6 +368,14 @@ h2 {
     box-shadow: 0 0 5px #4CAF50; /* Agrega un efecto visual al estar enfocado */
 }
 
+
+/*Stock*/
+.no-stock {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
+
 @media (max-width:500px) {
     
     .header {
