--- a/css/libreria.css
+++ b/css/libreria.css
@@ -7,7 +7,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
-    font-family: "Nunito", sans-serif;
+    font-family:'Poppins', sans-serif;
 }
 
 img {
