--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
-    font-family: "Nunito", sans-serif;
+    font-family:  'Poppins', sans-serif;
 }
 
 img {
@@ -136,7 +136,6 @@ th, td {
 
 .headerTxt h1 {
     font-size: 70px;
-    text-transform: capitalize;
     line-height: 1;
     color: #111419;
     margin-bottom: 35px;
@@ -188,7 +187,7 @@ h2 {
 
 .listProduct {
     list-style: none;
-    padding: 0;
+    padding-top: 30px;
 }
 
 .listProduct li {
@@ -328,7 +327,7 @@ h2 {
 
 .special-products .texto {
     font-size: 1.5rem;
-    color: #555;
+    color: #d12424;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-bottom: 10px;
@@ -346,6 +345,7 @@ h2 {
     justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
+    align-items: stretch; 
 }
 
 .product-card {
